fix: 프로필 라우터 수정, index.css 보더 색상 변경

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -7,7 +7,7 @@
   --color-foreground: light-dark(222.2 84% 4.9%, 210 40% 98%);
 
   /* Border & Input */
-  --color-border: light-dark(214.3 31.8% 91.4%, 217.2 32.6% 17.5%);
+  --color-border: #d1d5db; /* Tailwind의 gray-300 */
 }
 
 /* Base styles */
